--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,12 @@
     <uses-permission
         android:required="true"
         android:name="android.permission.INTERNET"/>
+    <uses-permission
+        android:required="true"
+        android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission
+        android:required="true"
+        android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -26,17 +32,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.LobbyActivity"/>
-        <service android:name=".network.Server"
+        <activity android:name=".activities.LobbyActivity"
+            android:screenOrientation="portrait"/>
+        <service android:name=".network.Server2"
             android:exported="false"/>
         <activity
             android:name=".activities.WikiActivity"
             android:label="@string/title_activity_wiki"
-            android:theme="@style/AppTheme.NoActionBar"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
