id:219 comment: client-service erstellt. noch nicht eingebaut und noch nicht funktionstüchtig.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         </activity>
         <activity android:name=".activities.LobbyActivity"
             android:screenOrientation="portrait"/>
-        <service android:name=".network.Server2"
+        <service android:name=".network.Server"
             android:exported="false"/>
         <activity
             android:name=".activities.WikiActivity"
