id:223, id:219 comment: Server und Client nochmal stark umgebaut. Außerdem Kommunikation zwischen Services und Activity vereinheitlicht und aufgebessert. Passwort ist nun rausgeflogen!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
             android:screenOrientation="portrait"/>
         <service android:name=".network.Server"
             android:exported="false"/>
+        <service android:name=".network.Client"
+            android:exported="false"/>
         <activity
             android:name=".activities.WikiActivity"
             android:label="@string/title_activity_wiki"
