erste gameSettingsActivity erstellt, ohne viel inhalt

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,13 @@
         <activity
             android:name=".Wiki.RegelnActivity"
             android:label="@string/title_activity_regeln"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Settings.SettingsActivity"
+            android:label="@string/title_activity_settings" />
+        <activity
+            android:name=".activities.GameSettingsActivity"
+            android:label="@string/title_activity_settings"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
